# DiscordCoreAPI

./: CMakeLists.txt  CMakePresets.json  ReadMe.md
Include/discordcoreapi/: AudioDecoder.hpp  Utilities.hpp
Vcpkg/ports/discordcoreapi/: portfile.cmake
